 2003-09-06 Martin Pollard <circlemaster@blueyonder.co.uk>
    - configure.in: changed win32 code to use winsock2.h instead of winsock.h.
    - skstream/skstream.h: added a guard #ifndef SOCKET_ERROR to it's definition.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h, skstream/skstream.cpp: Add extra argument
      to dgram_streambuf::setTarget() so protocol can be passed in.
      Add #warnings if the old non getaddrinfo code is being used.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstreamconfig.h.in, skstream/skstream_unix.h,
      skstream/skstream.h, skstream/skstream.cpp,
      skstream/skserver_unix.h, skstream/skserver.h, skstream/skserver.cpp:
      Remove as much platform sensitive code from the headers as possible,
      and simplify the generated header. Improve formatting and header
      guards for readability.
    - skstream/skserver_unix.h: Add a new constructor for unix_socket_server
      so it can be instanced without already knowing the details of the
      service.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h, skstream/skstream.cpp: Modify udp_socket_stream
      constructor so that it does not create the socket immediatly.
    - skstream/skstream.cpp: Re-write dgram_socketbuf::setTarget() so it
      uses getaddrinfo to create the socket, and get the address in
      a protocol independant way.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.h, skstream/skserver_unix.h: Add default constructor
      to tcp_socket_server, and make single argument constructors explicit.
    - skstream/skserver.cpp: Use AI_PASSIVE with getaddrinfo() to make listen
      sockets accept any connection.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.cpp: Use getaddrinfo to create server sockets
      in a protocol independant way.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Use getaddrinfo to handle the port number.