@@ -1,6 +1,14 @@
+ 2003-09-23 Al Riddoch <alriddoch@zepler.org>
+    - skstream/skserver.h: Make service an int in setService() as it always
+      is elsewhere.
+    - skstream/skserver.h, skstream/skserver.cpp: Make open() methods return
+      true on success, and false on failure.
+    - skstream/skserver.h, skstream/skserver.cpp: Add new method for
+      creating and binding to a socket, to avoid duplicating code.
  2003-09-06 Martin Pollard <circlemaster@blueyonder.co.uk>
     - configure.in: changed win32 code to use winsock2.h instead of winsock.h.
-    - skstream/skstream.h: added a guard #ifndef SOCKET_ERROR to it's definition.
+    - skstream/skstream.h: added a guard #ifndef SOCKET_ERROR to it's
+      definition.
  2003-08-23 Al Riddoch <alriddoch@zepler.org>
     - skstream/skstream.h, skstream/skstream.cpp: Add extra argument
       to dgram_streambuf::setTarget() so protocol can be passed in.
